--- a/templates/paiements/recapitulatifs/liste_recapitulatifs.html
+++ b/templates/paiements/recapitulatifs/liste_recapitulatifs.html
@@ -194,7 +194,7 @@
                                     <div class="row">
                                         {% for recapitulatif in groupe.list %}
                                             <div class="col-md-6 col-lg-4 mb-3">
-                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' %}
+                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' with is_privilege_user=is_privilege_user %}
                                             </div>
                                         {% endfor %}
                                     </div>
@@ -217,7 +217,7 @@
                                     <div class="row">
                                         {% for recapitulatif in groupe.list %}
                                             <div class="col-md-6 col-lg-4 mb-3">
-                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' %}
+                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' with is_privilege_user=is_privilege_user %}
                                             </div>
                                         {% endfor %}
                                     </div>
@@ -235,7 +235,7 @@
                                     <div class="row">
                                         {% for recapitulatif in groupe.list %}
                                             <div class="col-md-6 col-lg-4 mb-3">
-                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' %}
+                                                {% include 'paiements/recapitulatifs/includes/recap_card.html' with is_privilege_user=is_privilege_user %}
                                             </div>
                                         {% endfor %}
                                     </div>
