--- a/templates/paiements/liste_recaps_mensuels.html
+++ b/templates/paiements/liste_recaps_mensuels.html
@@ -19,7 +19,7 @@
         <a href="{% url 'paiements:creer_recap_mensuel' %}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Nouveau
         </a>
-               {% if user.is_superuser or 'PRIVILEGE' in user.groups.values_list:'name' %}
+        {% if user.is_superuser or is_privilege_user %}
         <a href="{% url 'paiements:liste_recaps_supprimes' %}" class="btn btn-outline-danger">
             <i class="bi bi-trash"></i> Supprimés
         </a>
