--- a/templates/paiements/recapitulatifs/detail_recapitulatif.html
+++ b/templates/paiements/recapitulatifs/detail_recapitulatif.html
@@ -106,14 +106,7 @@
                     {% endif %}
                 </ul>
             </div>
-            {% if not recapitulatif.recu %}
-            <a href="{% url 'paiements:creer_recu_recapitulatif' recapitulatif.pk %}" class="btn btn-primary">
-                <i class="bi bi-receipt"></i> Créer Reçu Standard
-            </a>
-            <a href="{% url 'paiements:creer_recu_gestimmob_recapitulatif' recapitulatif.pk %}" class="btn btn-warning">
-                <i class="bi bi-file-earmark-pdf"></i> Créer Reçu GESTIMMOB
-            </a>
-            {% else %}
+            {% if recapitulatif.recu %}
             <a href="{% url 'paiements:detail_recu_recapitulatif' recapitulatif.recu.pk %}" class="btn btn-primary">
                 <i class="bi bi-receipt"></i> Voir Reçu
             </a>
